--- a/package.json
+++ b/package.json
@@ -1,20 +1,51 @@
 {
   "name": "teammanager_distributor",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prod:build:change-pw": "webpack --config webpack/webpack.changePW.config.js",
+    "dev:build:change-pw": "webpack --config webpack/webpack.changePW.config.js",
+    "prod:server:change-pw": "webpack-dev-server --hot --config webpack/webpack.changePW.config.js",
+    "dev:server:change-pw": "webpack-dev-server --hot --config webpack/webpack.changePW.config.js",
+    "prod:build:reset-pw": "webpack --config webpack/webpack.resetPW.config.js",
+    "dev:build:reset-pw": "webpack --config webpack/webpack.resetPW.config.js",
+    "prod:server:reset-pw": "webpack-dev-server --hot --config webpack/webpack.resetPW.config.js",
+    "dev:server:reset-pw": "webpack-dev-server --hot --config webpack/webpack.resetPW.config.js"
   },
   "author": "seven",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.5.7",
+    "angular-cookies": "^1.5.7",
+    "angular-jwt": "^0.1.3",
+    "angular-sanitize": "^1.5.7",
+    "angular-translate": "^2.8.1",
+    "angular-translate-loader-static-files": "^2.8.1",
+    "angular-ui-router": "^0.3.1",
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
+    "crypto-js": "^3.1.6",
     "express": "^4.14.0",
-    "jsonwebtoken": "^7.1.8"
+    "html5shiv": "^3.7.3",
+    "jquery": "^1.11.3",
+    "jquery-migrate": "^1.2.1",
+    "jsonwebtoken": "^7.1.8",
+    "lodash": "^4.15.0",
+    "moment": "^2.8.4",
+    "ngstorage": "^0.3.11"
   },
   "devDependencies": {
-    "morgan": "^1.7.0"
+    "cross-env": "^2.0.1",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.22.0",
+    "morgan": "^1.7.0",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.15.1"
   }
 }
